# repr_offset_crates

./: .gitignore  .travis.yaml  .travis.yml  Cargo.toml  Changelog.md  README.md
.github/workflows/: rust.yml
repr_offset/: Cargo.toml  build.rs
repr_offset/src/: alignment.rs  docs.rs  ext.rs  field_offset.rs  for_examples_inner.rs  get_field_offset.rs  get_offset.rs  internal_macros.rs  lib.rs  macros.rs  offset_calc.rs  privacy.rs  repr_offset_macro.rs  struct_field_offset.rs  test_macros.rs  types_for_tests.rs  utils.rs
repr_offset/src/docs/: repr_offset_macro.rs
repr_offset/src/field_offset/: struct_field_offset.rs
repr_offset/src/get_field_offset/: tuple_impls.rs
repr_offset/src/macros/: for_boolean_const_enums.rs  off_macro.rs  unsafe_struct_field_offsets.rs
repr_offset/src/struct_field_offset/: impl_fieldoffset_methods.rs  repr_offset_ext_impls.rs
repr_offset/src/test_macros/: for_permutations.rs
repr_offset/src/utils/: maybeuninit_emulation.rs
repr_offset/tests/: accessing_struct_fields.rs  accessing_unaligned_struct_fields.rs  aligned_struct_offsets.rs  misc_tests.rs
repr_offset/tests/misc_tests_submod/: accessing_struct_fields.rs  aligned_struct_offsets.rs  derive_macro.rs  ext_traits.rs  fieldoffsets_cast_methods.rs  from_examples.rs  get_field_offset_trait.rs  misc_fieldoffsets_methods.rs  off_macros.rs  packed_struct_offsets.rs  struct_field_offsets_macro.rs
repr_offset_derive/: Cargo.toml
repr_offset_derive/src/: derive_repr_offset.rs  lib.rs
repr_offset_derive/src/derive_repr_offset/: attribute_parsing.rs
repr_offset_derive/test_data/: repr_offset.ron
src/: field_offset.rs  lib.rs  macros.rs  test_macros.rs  types_for_tests.rs
src/field_offset/: struct_field_offset.rs
src/test_macros/: for_permutations.rs
tests/: packed_struct_offsets.rs
