[package]
name = "repr_offset"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testing = []

priv_raw_ref = []

# To run tests in nightly Rust.
test_nightly = ["testing","priv_raw_ref"]

[dependencies]

