[package]
name = "repr_offset"
version = "0.0.1"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "Offsets of fields for types with a stable layout."
documentation = "https://docs.rs/repr_offset/"
readme="../README.md"
keywords = ["offset_of","mem","offsetof","offset","no-std"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/repr_offset_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../README.md",
    "../LICENSE-ZLIB.md", 
]

[badges]
travis-ci = { repository =  "rodrimati1992/repr_offset_crates/" }

[features]
testing = []

priv_raw_ref = []

# To run tests in nightly Rust.
test_nightly = ["testing","priv_raw_ref"]

[dependencies]

[build-dependencies]
rustc_version = "0.2.3"