[package]
name = "repr_offset"
version = "0.2.2"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "Offsets of fields for types with a stable layout."
documentation = "https://docs.rs/repr_offset/"
readme="../README.md"
keywords = ["offset_of","mem","offsetof","offset","no-std"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/repr_offset_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../README.md",
    "../LICENSE-ZLIB.md", 
    "build.rs", 
]

[badges]
travis-ci = { repository =  "rodrimati1992/repr_offset_crates/" }

[features]
default = []

# Enables the for_examples module, with types used in examples.
for_examples = []

derive = ["repr_offset_derive"]



testing = [
    # "priv_expensive_test",
    "for_examples",
]

priv_expensive_test = []

priv_raw_ref = []

docsrs = []

# To run tests in nightly Rust.
test_nightly = ["testing","priv_raw_ref"]

[dependencies]
repr_offset_derive = {version = "=0.2.0", path = "../repr_offset_derive", optional = true}

[dependencies.tstr]
version = "0.2"

[dev-dependencies]
repr_offset_derive = {version = "=0.2.0", path = "../repr_offset_derive"}

[package.metadata.docs.rs]
features = ["docsrs", "for_examples", "derive"]
