[package]
name = "repr_offset_derive"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "For deriving the offsets of fields for types with a stable layout."
documentation = "https://docs.rs/repr_offset/"
keywords = ["derive","offset_of","mem","offsetof","offset","no-std"]
categories = ["no-std"]
repository = "https://github.com/rodrimati1992/repr_offset_crates/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "../LICENSE-ZLIB.md", 
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository =  "rodrimati1992/repr_offset_crates/" }

[lib]
proc-macro = true

[features]
testing=["as_derive_utils/testing"]

[dependencies]
core_extensions = {version="0.1.16", default_features = false}
as_derive_utils = {version="0.8.2", default_features = false}
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

